[gd_scene load_steps=2 format=3 uid="uid://c0gpbgwmefog0"]

[ext_resource type="Script" uid="uid://pmlsusm4nv4b" path="res://Game_Plane_War/scripts/enemy_spawner.gd" id="1_ks1gq"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_ks1gq")
metadata/_edit_lock_ = true

[node name="SpawnPos" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="SpawnPos1" type="Marker2D" parent="SpawnPos"]
position = Vector2(1400, 61)
metadata/_edit_lock_ = true

[node name="SpawnPos2" type="Marker2D" parent="SpawnPos"]
position = Vector2(1400, 186)
metadata/_edit_lock_ = true

[node name="SpawnPos3" type="Marker2D" parent="SpawnPos"]
position = Vector2(1400, 311)
metadata/_edit_lock_ = true

[node name="SpawnPos4" type="Marker2D" parent="SpawnPos"]
position = Vector2(1400, 436)
metadata/_edit_lock_ = true

[node name="SpawnPos5" type="Marker2D" parent="SpawnPos"]
position = Vector2(1400, 561)
metadata/_edit_lock_ = true

[node name="SpawnPos6" type="Marker2D" parent="SpawnPos"]
position = Vector2(1400, 686)
metadata/_edit_lock_ = true

[node name="SpawnPos7" type="Marker2D" parent="SpawnPos"]
position = Vector2(1500, 123)
metadata/_edit_lock_ = true

[node name="SpawnPos8" type="Marker2D" parent="SpawnPos"]
position = Vector2(1500, 248)
metadata/_edit_lock_ = true

[node name="SpawnPos9" type="Marker2D" parent="SpawnPos"]
position = Vector2(1500, 373)
metadata/_edit_lock_ = true

[node name="SpawnPos10" type="Marker2D" parent="SpawnPos"]
position = Vector2(1500, 498)
metadata/_edit_lock_ = true

[node name="SpawnPos11" type="Marker2D" parent="SpawnPos"]
position = Vector2(1500, 623)
metadata/_edit_lock_ = true

[node name="EnemyTimer1" type="Timer" parent="."]
autostart = true

[node name="EnemyTimer2" type="Timer" parent="."]
autostart = true
